fix work content overflow bug in author page

--- a/xichuangzhu/static/style/page.less
+++ b/xichuangzhu/static/style/page.less
@@ -407,6 +407,11 @@ html {
       }
     }
 
+    .content-wap {
+      height: 120px;
+      overflow: hidden;
+    }
+
     .work-title {
       font-size: 14px;
       padding-bottom: 5px;
